[gd_scene load_steps=5 format=3 uid="uid://c30c5lr0v0sci"]

[ext_resource type="Texture2D" uid="uid://bmt62u4mtyt2x" path="res://sprites/tileset2.png" id="1_21t1u"]
[ext_resource type="Script" uid="uid://br2j54shmxovm" path="res://scenes/ui/building_ui_components/next_on_air_component/next_on_air_song_element.gd" id="1_qs1hh"]
[ext_resource type="FontFile" uid="uid://2yivcmy44ht4" path="res://fonts/GravityRegular5.ttf" id="2_qs1hh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_32roh"]
atlas = ExtResource("1_21t1u")
region = Rect2(416, 48, 16, 16)

[node name="NextOnAirSongElement" type="HBoxContainer"]
size_flags_vertical = 6
script = ExtResource("1_qs1hh")

[node name="SongCover" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_32roh")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SongLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.19607843, 0.16470589, 0.28627452, 1)
theme_override_fonts/font = ExtResource("2_qs1hh")
theme_override_font_sizes/font_size = 4
text = "\"Cosmic cookies\""

[node name="SongKeysLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.6392157, 0.7294118, 0.6, 1)
theme_override_font_sizes/normal_font_size = 4
theme_override_font_sizes/bold_font_size = 4
theme_override_font_sizes/bold_italics_font_size = 4
theme_override_font_sizes/italics_font_size = 4
theme_override_font_sizes/mono_font_size = 4
bbcode_enabled = true
text = "[CDEGCDDGCE]"
fit_content = true
